# dev-timesheets

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241201_000001_initial.py
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  health.py  integrations.py  projects.py  reminders.py  reports.py  router.py  time_entries.py
backend/app/celery/: app.py  tasks.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  base.py  integration.py  project.py  reminder.py  report.py  time_entry.py  user.py
backend/app/repositories/: base.py  integration_repository.py  project_repository.py  reminder_repository.py  report_repository.py  time_entry_repository.py  user_repository.py
backend/app/schemas/: auth.py  integration.py  project.py  reminder.py  report.py  time_entry.py  user.py
backend/app/services/: auth_service.py  exporters.py  integration_service.py  project_service.py  reminder_service.py  report_service.py  time_entry_service.py
backend/tests/: conftest.py  helpers.py
backend/tests/api/: test_auth.py  test_health.py  test_projects_time_entries.py  test_reminders_integrations.py  test_reports.py
docs/: backend-architecture.md  frontend-architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/constants/: timezones.ts
(+29 files in other folders)
