[tool.poetry]
name = "dev-timesheets-backend"
version = "0.1.0"
description = "FastAPI backend for Dev Timesheets platform"
authors = ["Timesheets Dev <dev@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
redis = "^5.0.4"
reportlab = "^4.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[tool.ruff]
line-length = 100
extend-select = ["Q"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
